--- a/administrador.html
+++ b/administrador.html
@@ -103,10 +103,10 @@
 	
 		<section class="contenedor">
 			<footer>
-				<img src="twitter.SVG" width="40">
-				<img src="facebook.SVG" width="40">
+				<a href="https://twitter.com/?lang=es"><img src="twitter.png" width="40"></a>
+				<a href="https://www.facebook.com/FacebookMexico/?ref=br_rs"><img src="facebook.png" width="40"></a>
 
-				<p>ESCOMpartir ©2018 | Acerca de... | Trabajos | Centro de Noticias | Constactanos | Profesores | Comunidad | Blog | Privacidad | Terminos de Servicios | Idioma</p>
+				<p>ESCOMpartir ©2018 | <a href=""> Acerca de...</a> | <a href="">Trabajos</a> | <a href="">Centro de Noticias</a> | <a href="">Constactanos</a> | <a href="">Profesores</a> | <a href="">Comunidad</a> | <a href="">Blog</a> | <a href="">Privacidad</a> | <a href="">Terminos de Servicios</a> | <a href="">Idioma</a></p>
 			</footer>
 		</section>
 		
