--- a/index.html
+++ b/index.html
@@ -49,9 +49,13 @@
 				</div>
 
 				<div class="texto">
-					<p>
-						Este sitio está creado para profesores y alumnos, es un lugar en donde profesores comparten contenido digital con sus alumnos, para enriquecer sus clases.
-					</p>
+					
+						<p>Los estudiantes de todos los niveles, pero en especial los jóvenes universitarios, siempre se encuentran en busca de información para poder realizar investigaciones, tareas y proyectos que los profesores les asignan.</p>
+						<p>En la Escuela Superior de Cómputo es muy común que los profesores al inicio del curso te den una lista de los libros en los que basan ese curso en especial, estos libros en muchas ocasiones no son fáciles de conseguir (son muy caros o casi están extintos), una opción por la que optan estos estudiantes es la búsqueda de este material en internet, una búsqueda que llega a ser larga en la cual debes invertir mucho tiempo y energía.</p> 
+						<p>También es común que estos profesores soliciten información que nos es para nada fácil de encontrar y siempre es mejor para ellos hacer la investigación en libros que en sitios de internet (y tienen razón hasta cierto punto), pero en muchas ocasiones el tiempo no alcanza cuando deben realizar diferentes tareas en una semana, entonces el ir a una biblioteca externa a la escuela, en donde hay un mayor número de material, es casi imposible. En otras ocasiones los profesores cuentan con la información pero no tienen una forma de compartirlo de forma sencilla o simplemente no conocen ninguna forma.</p>
+						<p>En la Internet existen diferentes plataformas en las que se puede compartir información, así es como nosotros pensamos en que una buena solución a este problema es crear un sitio web en el que se permita subir diferentes tipos de archivos como “.txt”, “pdf”, “.docx”, “.xlsx”, “.pptx” o “.mp4”, también algunos links para sitios web o videos en Youtube, estos archivos que sean compartidos por los profesores de una forma sencilla. Y que esta información siempre esté disponible para los alumnos, que sean del grupo durante el curso en cuestión o no lo sean, que los mismos profesores coloquen algunas recomendaciones sobre el contenido del libro. Toda esta información debe estar organizada por Unidades de Aprendizaje (UA’s) en donde se muestra la información de todos los profesores, en donde se pueda hacer búsquedas por profesores y/o tema.</p>
+
+					
 				</div>
 
 				<div class="botones_inicio row justify-content-around">
@@ -111,7 +115,7 @@
 				  <div class="container justify-content-center">
 				    <h2 class="display-4">Administrador</h2>
 				    <p class="lead">Comparte toda la información que quieras con tus alumnos y también con toda la comunida de ESCOM, que no haya limites para compartir el conocimiento con tus alumnos.</p>
-				    <img src="book.png" alt="" width="256" height="256">
+				    <img src="login.svg" alt="" width="256" height="256">
 				    <div class="w-100 mt-2"></div>
 				    <a class="btn btn_red btn-lg" href="#registro" role="button">Registrarme</a>
 				  </div>
@@ -336,7 +340,9 @@
 
 		<section class="contenedor">
 			<footer>
-				<p>ESCOMpartir ©2018 | Acerca de... | Trabajos | Centro de Noticias | Constactanos | Profesores | Comunidad | Blog | Privacidad | Terminos de Servicios | Idioma</p>
+				<a href="https://twitter.com/?lang=es"><img src="twitter.png" width="40"></a>
+				<a href="https://www.facebook.com/FacebookMexico/?ref=br_rs"><img src="facebook.png" width="40"></a>
+				<p>ESCOMpartir ©2018 | <a href=""> Acerca de...</a> | <a href="">Trabajos</a> | <a href="">Centro de Noticias</a> | <a href="">Constactanos</a> | <a href="">Profesores</a> | <a href="">Comunidad</a> | <a href="">Blog</a> | <a href="">Privacidad</a> | <a href="">Terminos de Servicios</a> | <a href="">Idioma</a></p>
 			</footer>
 		</section>
 
