--- a/profesor.html
+++ b/profesor.html
@@ -74,7 +74,7 @@
 				  <div class="container justify-content-center">
 				    <br>
 				    <br>
-				    <p class="lead"><img src="profe.png" width="50" > CSS </p>
+				    <p class="lead"><img src="profe.png" width="50" > CSS <a href=""><img src="word.png"><img src="excel.png"><img src="powerpoint.png"><img src="mp4.png"><img src="pdf.png"><img src="add.png"></a></p>
 				    <div class="w-100 mt-2"></div>
 				  </div> 
 				</div>    
@@ -85,7 +85,7 @@
 				  <div class="container justify-content-center">
 				    <br>
 				    <br>
-				    <p class="lead"><img src="profe.png" width="50" > HTML5 </p>
+				    <p class="lead"><img src="profe.png" width="50" > HTML5 <a href=""><img src="word.png"><img src="excel.png"><img src="powerpoint.png"><img src="mp4.png"><img src="pdf.png"><img src="add.png"></a></p>
 				    <div class="w-100 mt-2"></div>
 				  </div> 
 				</div>    
@@ -96,7 +96,7 @@
 				  <div class="container justify-content-center">
 				    <br>
 				    <br>
-				    <p class="lead"><img src="profe.png" width="50" > JAVASCRIP </p>
+				    <p class="lead"><img src="profe.png" width="50" > JAVASCRIP <a href=""><img src="word.png"><img src="excel.png"><img src="powerpoint.png"><img src="mp4.png"><img src="pdf.png"><img src="add.png"></a></p>
 				    <div class="w-100 mt-2"></div>
 				  </div> 
 				</div>    
@@ -107,7 +107,7 @@
 				  <div class="container justify-content-center">
 				    <br>
 				    <br>
-				    <p class="lead"><img src="profe.png" width="50" > BOOTSTRAP </p>
+				    <p class="lead"><img src="profe.png" width="50" > BOOTSTRAP <a href=""><img src="word.png"><img src="excel.png"><img src="powerpoint.png"><img src="mp4.png"><img src="pdf.png"><img src="add.png"></a></p>
 				    <div class="w-100 mt-2"></div>
 				  </div> 
 				</div>    
@@ -118,7 +118,7 @@
 				  <div class="container justify-content-center">
 				    <br>
 				    <br>
-				    <p class="lead"><img src="profe.png" width="50" > CSS3 </p>
+				    <p class="lead"><img src="profe.png" width="50" > CSS3 <a href=""><img src="word.png"><img src="excel.png"><img src="powerpoint.png"><img src="mp4.png"><img src="pdf.png"><img src="add.png"></a></p>
 				    <div class="w-100 mt-2"></div>
 				  </div> 
 				</div>    
@@ -128,9 +128,9 @@
 				
 	<section class="contenedor">
 		<footer>
-			<img src="twiter.png" width="40">
-			<img src="facebook.png" width="40">
-			<p>ESCOMpartir ©2018 | Acerca de... | Trabajos | Centro de Noticias | Constactanos | Profesores | Comunidad | Blog | Privacidad | Terminos de Servicios | Idioma</p>
+			<a href="https://twitter.com/?lang=es"><img src="twitter.png" width="40"></a>
+			<a href="https://www.facebook.com/FacebookMexico/?ref=br_rs"><img src="facebook.png" width="40"></a>
+			<p>ESCOMpartir ©2018 | <a href=""> Acerca de...</a> | <a href="">Trabajos</a> | <a href="">Centro de Noticias</a> | <a href="">Constactanos</a> | <a href="">Profesores</a> | <a href="">Comunidad</a> | <a href="">Blog</a> | <a href="">Privacidad</a> | <a href="">Terminos de Servicios</a> | <a href="">Idioma</a></p>
 		</footer>
 	</section>
 </body>
