--- a/administrador.html
+++ b/administrador.html
@@ -183,8 +183,8 @@
 	
 		<section class="pie">
 			<footer>
-				<a href="https://twitter.com/?lang=es"><img src="twitter.png" width="40"></a>
-				<a href="https://www.facebook.com/FacebookMexico/?ref=br_rs"><img src="facebook.png" width="40"></a>
+				<a href="https://twitter.com/?lang=es"><img src="twitter.svg" width="40"></a>
+				<a href="https://www.facebook.com/FacebookMexico/?ref=br_rs"><img src="facebook.svg" width="40"></a>
 
 				<p>ESCOMpartir ©2018 | <a href=""> Acerca de...</a> | <a href="">Trabajos</a> | <a href="">Centro de Noticias</a> | <a href="">Constactanos</a> | <a href="">Profesores</a> | <a href="">Comunidad</a> | <a href="">Blog</a> | <a href="">Privacidad</a> | <a href="">Terminos de Servicios</a> | <a href="">Idioma</a></p>
 			</footer>
