--- a/alumno.html
+++ b/alumno.html
@@ -97,7 +97,7 @@
 				  <div class="media-body">
 				    <h4>CSS</h4>
 				  	</div>
-				   <a href=""><img src="word.png"  class="ml-3 mt-3 rounded-circle" style="width:40px;"><img src="excel.png"  class="ml-3 mt-3 rounded-circle" style="width:40px;"><img src="powerpoint.png"  class="ml-3 mt-3 rounded-circle" style="width:40px;"><img src="mp4.png"  class="ml-3 mt-3 rounded-circle" style="width:40px;"><img src="pdf.png"  class="ml-3 mt-3 rounded-circle" style="width:40px;"></a>
+				   <a href=""><img src="word.svg"  class="ml-3 mt-3 rounded-circle" style="width:40px;"><img src="excel.svg"  class="ml-3 mt-3 rounded-circle" style="width:40px;"><img src="powerpoint.svg"  class="ml-3 mt-3 rounded-circle" style="width:40px;"><img src="mp4.svg"  class="ml-3 mt-3 rounded-circle" style="width:40px;"><img src="pdf.svg"  class="ml-3 mt-3 rounded-circle" style="width:40px;"></a>
 				</div>
 
 				<!---alt="John Doe"-->
@@ -107,7 +107,7 @@
 				  <div class="media-body">
 				    <h4>HTML5</h4>
 				  	</div>
-				   <a href=""><img src="word.png"  class="ml-3 mt-3 rounded-circle" style="width:40px;"><img src="excel.png"  class="ml-3 mt-3 rounded-circle" style="width:40px;"><img src="powerpoint.png"  class="ml-3 mt-3 rounded-circle" style="width:40px;"><img src="mp4.png"  class="ml-3 mt-3 rounded-circle" style="width:40px;"><img src="pdf.png"  class="ml-3 mt-3 rounded-circle" style="width:40px;"></a>
+				   <a href=""><img src="word.svg"  class="ml-3 mt-3 rounded-circle" style="width:40px;"><img src="excel.svg"  class="ml-3 mt-3 rounded-circle" style="width:40px;"><img src="powerpoint.svg"  class="ml-3 mt-3 rounded-circle" style="width:40px;"><img src="mp4.svg"  class="ml-3 mt-3 rounded-circle" style="width:40px;"><img src="pdf.svg"  class="ml-3 mt-3 rounded-circle" style="width:40px;"></a>
 				</div>
 
 				<!---alt="John Doe"-->
@@ -117,7 +117,7 @@
 				  <div class="media-body">
 				    <h4>JAVASCRIP</h4>
 				  	</div>
-				   <a href=""><img src="word.png"  class="ml-3 mt-3 rounded-circle" style="width:40px;"><img src="excel.png"  class="ml-3 mt-3 rounded-circle" style="width:40px;"><img src="powerpoint.png"  class="ml-3 mt-3 rounded-circle" style="width:40px;"><img src="mp4.png"  class="ml-3 mt-3 rounded-circle" style="width:40px;"><img src="pdf.png"  class="ml-3 mt-3 rounded-circle" style="width:40px;"></a>
+				   <a href=""><img src="word.svg"  class="ml-3 mt-3 rounded-circle" style="width:40px;"><img src="excel.svg"  class="ml-3 mt-3 rounded-circle" style="width:40px;"><img src="powerpoint.svg"  class="ml-3 mt-3 rounded-circle" style="width:40px;"><img src="mp4.svg"  class="ml-3 mt-3 rounded-circle" style="width:40px;"><img src="pdf.svg"  class="ml-3 mt-3 rounded-circle" style="width:40px;"></a>
 				</div>
 
 				<!---alt="John Doe"-->
@@ -127,7 +127,7 @@
 				    <div class="media-body">
 				        <h4>BOOTTRAP</h4>
 				  	</div>
-				   <a href=""><img src="word.png"  class="ml-3 mt-3 rounded-circle" style="width:40px;"><img src="excel.png"  class="ml-3 mt-3 rounded-circle" style="width:40px;"><img src="powerpoint.png"  class="ml-3 mt-3 rounded-circle" style="width:40px;"><img src="mp4.png"  class="ml-3 mt-3 rounded-circle" style="width:40px;"><img src="pdf.png"  class="ml-3 mt-3 rounded-circle" style="width:40px;"></a>
+				   <a href=""><img src="word.svg"  class="ml-3 mt-3 rounded-circle" style="width:40px;"><img src="excel.svg"  class="ml-3 mt-3 rounded-circle" style="width:40px;"><img src="powerpoint.svg"  class="ml-3 mt-3 rounded-circle" style="width:40px;"><img src="mp4.svg"  class="ml-3 mt-3 rounded-circle" style="width:40px;"><img src="pdf.svg"  class="ml-3 mt-3 rounded-circle" style="width:40px;"></a>
 				</div>
 
 				<!---alt="John Doe"-->
@@ -137,7 +137,7 @@
 				  <div class="media-body">
 				    <h4>CSS3</h4>
 				  	</div>
-				   <a href=""><img src="word.png"  class="ml-3 mt-3 rounded-circle" style="width:40px;"><img src="excel.png"  class="ml-3 mt-3 rounded-circle" style="width:40px;"><img src="powerpoint.png"  class="ml-3 mt-3 rounded-circle" style="width:40px;"><img src="mp4.png"  class="ml-3 mt-3 rounded-circle" style="width:40px;"><img src="pdf.png"  class="ml-3 mt-3 rounded-circle" style="width:40px;"></a>
+				   <a href=""><img src="word.svg"  class="ml-3 mt-3 rounded-circle" style="width:40px;"><img src="excel.svg"  class="ml-3 mt-3 rounded-circle" style="width:40px;"><img src="powerpoint.svg"  class="ml-3 mt-3 rounded-circle" style="width:40px;"><img src="mp4.svg"  class="ml-3 mt-3 rounded-circle" style="width:40px;"><img src="pdf.svg"  class="ml-3 mt-3 rounded-circle" style="width:40px;"></a>
 				</div>
 
 				<!---alt="John Doe"-->
@@ -148,13 +148,13 @@
 	<section class="pie">
 		<footer>
 			<div>
-				<span><a href="https://twitter.com/?lang=es"><img src="twitter.png" width="40"></a></span>
-				<span><a href="https://www.facebook.com/FacebookMexico/?ref=br_rs"><img src="facebook.png" width="40"></a></span>
+				<span><a href="https://twitter.com/?lang=es"><img src="twitter.svg" width="40"></a></span>
+				<span><a href="https://www.facebook.com/FacebookMexico/?ref=br_rs"><img src="facebook.svg" width="40"></a></span>
 				
 			</div>
 			<div>
 				<span>
-					<p>ESCOMpartir ©2018 | <a href=""> Acerca de...</a> | <a href="">Trabajos</a> | <a href="">Centro de Noticias</a> | <a href="">Constactanos</a> | <a href="">Profesores</a> | <a href="">Comunidad</a> | <a href="">Blog</a> | <a href="">Privacidad</a> | <a href="">Terminos de Servicios</a> | <a href="">Idioma</a></p>	
+					<p>ESCOMpartir ©2018 | <a href="acercade.html"> Acerca de...</a> | <a href="">Trabajos</a> | <a href="">Centro de Noticias</a> | <a href="">Constactanos</a> | <a href="">Profesores</a> | <a href="">Comunidad</a> | <a href="">Blog</a> | <a href="">Privacidad</a> | <a href="">Terminos de Servicios</a> | <a href="">Idioma</a></p>	
 				</span>
 				
 			</div>
